# matplotlib-inline

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.cfg  setup.py
.github/: dependabot.yml
.github/workflows/: main.yml  publish.yml
matplotlib_inline/: __init__.py  backend_inline.py  config.py
tests/: test_import.py
tests/notebooks/: config_InlineBackend.ipynb  mpl_inline.ipynb
