[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools"]

[project]
name = "matplotlib-inline"
description = "Inline Matplotlib backend for Jupyter"
authors = [
    {name = "IPython Development Team", email = "ipython-dev@python.org"},
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: IPython",
    "Framework :: Jupyter :: JupyterLab :: 3",
    "Framework :: Jupyter :: JupyterLab :: 4",
    "Framework :: Jupyter :: JupyterLab",
    "Framework :: Jupyter",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License-Expression: BSD-3-Clause",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python",
    "Topic :: Multimedia :: Graphics",
]
dependencies = ["traitlets"]
dynamic = ["version"]
keywords = [
    "ipython",
    "jupyter",
    "matplotlib",
    "python",
]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.9"

[project.entry-points."matplotlib.backend"]
inline = "matplotlib_inline.backend_inline"

[project.optional-dependencies]
test = [
    "flake8",
    "matplotlib",
    "nbdime",
    "nbval",
    "notebook",
    "pytest",
]

[project.urls]
Homepage = "https://github.com/ipython/matplotlib-inline"

[tool.setuptools.dynamic]
version = {attr = "matplotlib_inline.__version__"}

[tool.pytest.ini_options]
xfail_strict = true
log_cli_level = "info"
addopts = [
    "--nbval",
    "--ignore=tests/notebooks/.ipynb_checkpoints/*",
    "--strict-config",
    "-ra",
    "--strict-markers",
]
filterwarnings = ["error"]
testpaths = [
    "tests",
]
