[metadata]
name = matplotlib-inline
version = attr: matplotlib_inline.__version__
description = Inline Matplotlib backend for Jupyter
long_description = file: README.md, LICENSE
long_description_content_type = text/markdown
author = IPython Development Team
author_email = ipython-dev@scipy.org
url = https://github.com/ipython/matplotlib-inline
license = BSD 3-Clause
license_file = LICENSE
keywords = python, ipython, matplotlib, jupyter

[options]
packages = find:
python_requires = >=3.5
install_requires =
    traitlets
classifiers =
    Framework :: Jupyter
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
